--- a/LoginPage/Base.lproj/Main.storyboard
+++ b/LoginPage/Base.lproj/Main.storyboard
@@ -118,7 +118,7 @@ interest and study major</string>
         <scene sceneID="UIx-Nl-7BB">
             <objects>
                 <viewController storyboardIdentifier="CreateaccVC" id="ZqH-xg-wu5" customClass="CreateaccVC" customModule="LoginPage" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="nRy-Ft-gd5">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="nRy-Ft-gd5">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -768,7 +768,7 @@ existing jobs</string>
         <scene sceneID="yhW-co-kX3">
             <objects>
                 <viewController storyboardIdentifier="Loginvc" id="ULB-av-OGG" customClass="Loginvc" customModule="LoginPage" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="241-Kf-r7Z">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="241-Kf-r7Z">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -811,7 +811,7 @@ been missed!</string>
                                     <constraint firstAttribute="height" constant="40" id="4Bl-lz-Cs1"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MI2-k0-Lz2">
                                 <rect key="frame" x="170.33333333333337" y="412.33333333333331" width="192.66666666666663" height="32"/>
@@ -984,18 +984,18 @@ been missed!</string>
         <scene sceneID="UJQ-sK-sxm">
             <objects>
                 <viewController storyboardIdentifier="TroubleLoginVC" id="ZHL-Ys-DXd" customClass="TroubleLoginVC" customModule="LoginPage" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Q2G-d6-pcO">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="Q2G-d6-pcO">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trouble logging in?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QoJ-4s-vH5">
-                                <rect key="frame" x="10" y="342" width="373" height="25.333333333333314"/>
+                                <rect key="frame" x="10" y="342" width="370" height="25.333333333333314"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address or mobile number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2p7-48-osd" customClass="troubleloginvc">
-                                <rect key="frame" x="30" y="427.33333333333331" width="333" height="40"/>
+                                <rect key="frame" x="30" y="427.33333333333331" width="330" height="40"/>
                                 <color key="backgroundColor" red="0.82878946519999996" green="0.41773375740000002" blue="0.34884231399999999" alpha="0.1046184099" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="gYf-nS-ecN"/>
@@ -1005,7 +1005,7 @@ been missed!</string>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFR-qN-dyT" customClass="troubleloginvc">
-                                <rect key="frame" x="30" y="497.33333333333326" width="333" height="40"/>
+                                <rect key="frame" x="30" y="497.33333333333326" width="330" height="40"/>
                                 <color key="backgroundColor" red="0.85951721420000005" green="0.43445472639999999" blue="0.221202116" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="333" id="FIC-9U-V3Y"/>
@@ -1027,14 +1027,14 @@ been missed!</string>
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="80W-vc-wen">
-                                <rect key="frame" x="80" y="557.33333333333337" width="233" height="35"/>
+                                <rect key="frame" x="80" y="557.33333333333337" width="230" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Can't reset your password?">
                                     <color key="baseForegroundColor" red="0.85951721420000005" green="0.43445472639999999" blue="0.221202116" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="slO-qp-coH">
-                                <rect key="frame" x="136.66666666666666" y="122.66666666666666" width="119.99999999999997" height="118.66666666666669"/>
+                                <rect key="frame" x="135" y="122.66666666666666" width="120" height="118.66666666666669"/>
                                 <color key="tintColor" red="0.85951721420000005" green="0.43445472639999999" blue="0.221202116" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="EnU-bu-ae7"/>
@@ -1042,7 +1042,7 @@ been missed!</string>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PZg-15-dhR">
-                                <rect key="frame" x="145" y="672.33333333333337" width="103" height="40"/>
+                                <rect key="frame" x="145" y="672.33333333333337" width="100" height="40"/>
                                 <color key="backgroundColor" red="0.85951721420000005" green="0.43445472639999999" blue="0.221202116" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="hDH-Zp-XAC"/>
@@ -1153,10 +1153,10 @@ been missed!</string>
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemCyanColor">
-            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
